--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
++ <script>
+// 1. globale Defaults auf Inter & größere Größe
++   Chart.defaults.font.family = 'Inter, sans-serif';
++   Chart.defaults.font.size   = 16;
++ </script>
   <style>
     body { font-family: 'Inter', sans-serif; text-align: center; padding: 2rem; max-width: 800px; margin: auto; }
     h1 { font-size: 2.2rem; margin-bottom: 1rem; }
@@ -21,7 +25,7 @@
     #advanced { display: none; border: 1px dashed #bbb; padding: 1rem; border-radius: 6px; margin-top: 0.5rem; /* Kleiner Abstand zum Toggle */ }
     #warn { color: #c00; font-size: 0.9rem; margin-bottom: 1rem; min-height: 1.2em; /* Platzhalter, damit Layout nicht springt */ }
     /* Höhe mit !important wiederhergestellt, um Springen zu verhindern */
-    canvas { width: 100%; height: 450px !important; margin-bottom: 2rem; }
+    canvas { width:100% !important; height:auto !important; margin-bottom:2rem; }
     h3 { margin-top: 3rem; } /* Mehr Abstand nach oben für die Vergleichsüberschrift */
   </style>
 </head>
@@ -61,10 +65,10 @@
 </section>
 
 <h2 id="headline"></h2>
-<canvas id="chart"></canvas>
+<canvas id="chart" width="800" height="600"></canvas>
 
 <h3>Vergleich (Endkapital)</h3>
-<canvas id="compare"></canvas>
+<canvas id="compare" width="800" height="600"></canvas>
 
 <script>
 const taxRate = 0.26375; // Kapitalertragsteuer 26,375 %
