--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     #advanced { display: none; border: 1px dashed #bbb; padding: 1rem; border-radius: 6px; margin-top: 0.5rem; /* Kleiner Abstand zum Toggle */ }
     #warn { color: #c00; font-size: 0.9rem; margin-bottom: 1rem; min-height: 1.2em; /* Platzhalter, damit Layout nicht springt */ }
     /* Höhe mit !important wiederhergestellt, um Springen zu verhindern */
-    canvas { width:100% !important; height:auto !important; margin-bottom:2rem; }
+    canvas { width:100% !important; max-width:760px; height:600px !important; margin:2rem auto; display:block; }
     h3 { margin-top: 3rem; } /* Mehr Abstand nach oben für die Vergleichsüberschrift */
   </style>
 </head>
@@ -192,7 +192,7 @@ function calc(withTax) {
       ]
     },
     options: {
-      responsive: true,
+      responsive: false,
       maintainAspectRatio: false, // Wichtig bei fester Canvas-Höhe im CSS
       plugins: {
         legend: {
